--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,5 @@ public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_2361
 public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTURES
 public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ # Structures that terraforms the surrounding land
 public net.minecraft.world.gen.DimensionSettings$Preset field_236128_h_ # PRESET_MAP
+public net.minecraft.world.gen.DimensionSettings$Preset field_236128_h_ # PRESET_MAP
+public-f net.minecraft.world.biome.Biome Category #targets the category class within biome to make custom categories
