--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,37 +3,50 @@
 # The overall format is standard TOML format, v0.5.0.
 # Note that there are a couple of TOML lists in this file.
 # Find more information on toml format here:  https://github.com/toml-lang/toml
+
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
+
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[32,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license="All rights reserved"
+
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL="http://my.issue.tracker/" #optional
+issueTrackerURL="https://github.com/theChrisODOM/AlphaCraft/issues" #optional
+
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
+
 # The modid of the mod
 modId="alphacraft" #mandatory
+
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.16.1_0.0.2" #mandatory
+version="1.16.1_0.1.0" #mandatory
+
  # A display name for the mod
 displayName="AlphaCraft" #mandatory
+
 # A URL to query for updates for this mod. See the JSON update specification <here>
 updateJSONURL="http://myurl.me/" #optional
+
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="http://example.com/" #optional
+
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
+logoFile="logo.png" #optional
+
 # A text field displayed in the mod UI
-credits="Thanks for this example mod goes to Java" #optional
+credits="Thanks to TurtyWurty, Technovision, and other modders for providing an education in the minecraft java modding field." #optional
+
 # A text field displayed in the mod UI
 authors="Noxeramas, Bellatorex" #optional
+
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-This mod adds an additional dimension to minecraft with lots of new blocks.
-penis
+Alphacraft adds a new Dimension called The Alpha which is full of new building blocks, dungeons that are proc gen, hostile mobs, and much much more!
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.alphacraft]] #optional
